--- a/_includes/header.html
+++ b/_includes/header.html
@@ -6,13 +6,13 @@
       <img class="avatar" src="https://secure.gravatar.com/avatar/{{ site.theme.gravatar }}?s=100" alt=""/>
     </a>
 		{% else if site.theme.avatar %}
-		<a href="{{ site.baseurl }}/">
+		<a href="{{ site.baseurl }}">
       <img class="avatar" src="{{ site.baseurl }}/img/{{ site.theme.avatar }}" alt=""/>
     </a>
 		{% endif %}
 		
 		<h1 class="site-title">
-			<a href="{{ site.baseurl }}/">{{ site.theme.title }}</a>
+			<a href="{{ site.baseurl }}">{{ site.theme.title }}</a>
 		</h1>
 	</div>
 	
