--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,16 +1,63 @@
 <!DOCTYPE html>
-<html class="no-js">
+<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en-us">
 
-  {% include head.html %}
+{% include head.html %}
 
-  <body>
-    {% include header.html %}
+<body>
+  <nav class="navbar navbar-inverse" role="navigation">
+    <div class="container">
+      <div class="navbar-header">
+        <div class="navbar-brand"> <a href="{{ "/" | prepend:site.baseurl }}">{{ site.title }}</a>
+        </div>
+        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar-collapse">
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+        </button>
+      </div>
+      <div class="collapse navbar-collapse" id="navbar-collapse">
+        <ul class="nav navbar-nav" >
+{% for link in site.sections %}
+  {% if link.url contains page.category %}
+    <li class="active" >
+  {% else %}                    
+    <li>
+  {% endif %}
+  <a href="{{ site.baseurl }}{{ link.url }}">{{ link.title }}</a>
+  </li>
+{% endfor %}
 
-    <div class="content">
-      {{ content }}
+        </ul>
+        <ul class="nav navbar-nav navbar-right" >
+            {% include nav-right.html %}
+        </ul>
+      </div>
+    </div>
+  </nav>
+
+  <div class="container">
+      <div class="row">
+        {% if page.hide_sidebar %}
+          <div class="col-sm-12">
+            {{ content }}
+          </div>
+        {% else %}
+          <div class="col-sm-8">
+            {{ content }}
+<a class="freccia" href="#"><span class="glyphicon glyphicon-arrow-up"></span></a>
+          </div>
+          <div class="col-sm-4">
+            {% include sidebar.html %}
+          </div>
+        {% endif %}
+      </div>
+      <div class="row footer">
+        <div class="col-sm-12 text-center">
+          {% include footer.html %}
+        </div>
+      </div>
     </div>
 
-    {% include footer.html %}
+    {% include scripts.html %}
   </body>
-  
 </html>
