--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -1,24 +1,16 @@
 ---
 layout: default
 ---
-     {% include _sidebar.html %}
 
-<article class="feature-image">
-  {% if page.image == none %}
-    <header style="background-image: url('{{ site.baseurl }}/img/cielo.jpg')">
-  {% else %}
-    <header style="background-image: url('{{ site.baseurl }}/img/{{ page.image }}')">
+<div class="post-header">
+  <h1 class="post-title-main">{{ page.title }}</h1>
+</div>
+  {% if page.image != none %}
+<div class="well well-sm">
+<img src="{{ site.baseurl }}/img/{{ page.image }}" class="img-responsive" >
+</div>
   {% endif %}
-  <h1 class="title">{{ page.title }}</h1>
-  {% if page.subtitle != none %}
-    <p class="meta">
-    {{ page.subtitle }}
-    </p>
-  {% endif %}
-    </header>
-
-  <section class="post-content">
-    {{ content }}<a class="freccia" href="#">&#x2191;</a>
-  </section>
-
-</article>
+<div class="post-content">
+  {{ content }}
+</div>
+{% include post-footer.html %}
