--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,5 +1,6 @@
-{% if site.theme.footer_text %}
-<footer class="site-footer">
-	<p class="text">{{ site.theme.footer_text }}</p>
-</footer>
+<div class="clearfix visible-lg"></div>
+{% if site.footer_text %}
+<div class="footer navbar-inverse" >
+	<p class="text-info">{{ site.footer_text }}</p>
+</div>
 {% endif %}
