--- a/_includes/post-taglist.html
+++ b/_includes/post-taglist.html
@@ -1,4 +1,3 @@
- 
 <ul>
   {% for post in site.posts %}
    {% if post.tags contains page.title %}
@@ -21,6 +20,9 @@
 {% endcase %} 
 {{ post.date | date: "%Y" }})
 <!--  <a style="color:gray" href="{{ site.baseurl }}/tags/autori/{{ post.author }}">{{ post.author }}</a> -->
+   {% if post.tags contains "Meditazione" %}
+su {{ post.passo }}
+   {% endif %} 
 </li>
    {% endif %} 
   {% endfor %}
