--- a/_includes/post-teaser.html
+++ b/_includes/post-teaser.html
@@ -1,4 +1,3 @@
-<!-- <div class="posts"> -->
 <h2 class="post-title">
   <a href="{{ site.baseurl }}{{ post.url }}">
       {{ post.title }}
@@ -23,12 +22,11 @@
   {% endcase %}
   {{ post.date | date: "%Y" }}
   {% if post.tags != none %}
-Tags: {% for tag in post.tags %} <a href="{{ site.baseurl }}/blog/tags/{{ tag }}">{{ tag }}</a> {% endfor %} 
+Tags: {% for tag in post.tags %} <a href="{{ site.baseurl }}/info/tags/{{ tag }}">{{ tag }}</a> {% endfor %} 
   {% endif %}    
 </div> <br> 
-      {% if post.thumb != null %}
-         <img class="thumb" src="{{ site.baseurl }}/img/{{ post.thumb }}" alt="{{ post.thumb }}" />
+      {% if post.image != null %}
+         <img src="{{ site.baseurl }}/img/{{ post.image }}" alt="{{ post.image }}" class="img-thumbnail" width="250" height="200" />
       {% endif %}     
-      {{ post.excerpt }}<a class="button" href="{{ post.url | prepend: site.baseurl }}">{{ site.theme.str_continue_reading }}</a>
-<!--  </div> -->
+      {{ post.excerpt }}<a href="{{ post.url | prepend: site.baseurl }}">{{ site.str_continue_reading }}</a> <br style="clear:both">
 
